 	found. Use package xe_stubs (was a procedure).

	* xe_parse.adb: Change termination variable from X to
 	X_Termination to avoid conflicts. Change some error messages.

	* xe_build.adb, xe_lead.adb, xe_stubs.adb, xe.adb, xe_check.adb,
 	xe_parse.adb, xe_usage.adb, xe_back.adb, xe_defs.adb, xe_scan.adb,
 	xe_utils.adb: Reorganize all code (alphabetical order).


Thu Feb 13 15:21:57 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe.adb: Minor reformating

	* xe_stubs.adb, xe_back.adb, xe_parse.adb, xe.ads, xe.adb: Move
 	Permanent into Termination. Three modes are allowed : Local (Don't
 	bother with other partitions), Global (Default), Deferred (Same as
 	Global but at the end, do not terminate).

	* xe_stubs.adb: When Local_Termination, once we exit the main
 	subprogram

Thu Feb 13 11:42:17 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* xe.adb: Recognize '/' as well as the system's default separator.

	* xe_utils.adb: Ditto.

Wed Feb 12 12:26:01 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe_utils.adb: Fix bug in Is_Relative_Dir with No_Name.
	Try to suppress '/' occurrences to futur port to Windows.

	* xe_stubs.adb: Fix bug that occurs when building executable file
 	name with No_Storage_Dir. String "../../.." appended twice.

	* xe_check.adb, xe_util.adb: Clean error message. Use
 	All_Lower_Case in Write_Unit_Name.

	* xe.ads: Minor reformatting.

	* xe_back.adb: Reorganize code (alphabetical order).

Tue Feb 11 16:27:04 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* xe_check.adb: Do not try to recompile internal units. This code
 	was taken from an old version of gnatmake.

Tue Feb 11 11:38:48 1997  Laurent Pautet  <pautet@lglsun2.epfl.ch>

	* xe.adb, xe_stubs.adb: Use of Write_Missing_File.

Mon Feb 10 21:10:20 1997  Laurent Pautet  <pautet@lglsun2.epfl.ch>

	* xe_stubs.adb: Reorganize code (alphabetical order) and change
 	some parameter names.

	* xe_stubs.adb: Use the two new procedures of XE.
